Dockerising single node setup